# Advanced-Simulator-Programming-Assignment

./: CMakeLists.txt  guiapplication.cpp  guiapplication.h  main.cpp
benchmarks/: CMakeLists.txt  template_benchmark.cc
report/: Bibliography.bib  Report.aux  Report.bbl  Report.blg  Report.out  Report.tex
resources/qml/: main.qml
resources/qml/cameras/: OrthographicCamera.qml  ProjectionCamera.qml
simulatoraspect/: CMakeLists.txt  collision_algorithms.cpp  collision_algorithms.h  objectcontroller.cpp  objectcontroller.h  objectcontrollerbackend.cpp  objectcontrollerbackend.h  simulator.cpp  simulator.h  simulatoraspect.cpp  simulatoraspect.h  simulatoraspecttypes.h  simulatorjob.cpp  simulatorjob.h  structs.h
unittests/: CMakeLists.txt  collision_algorithms_tests.cc
